--- a/frontend/src/css/_header.scss
+++ b/frontend/src/css/_header.scss
@@ -18,7 +18,7 @@
       &__img{
         width: 100%;
         height: 100%;
-        background-image: url('../../public/img/logo2.png');
+        background-image: url('../pages/logo2.png');
         background-size: cover;
         background-position: center;
       }
