--- a/frontend/src/css/_normolize.scss
+++ b/frontend/src/css/_normolize.scss
@@ -2,6 +2,13 @@
     scale: 3;
 }
 
+body{
+    font-family: "Lexend", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: bolder;
+}
+
 /**
   Нормализация блочной модели
  */
