--- a/frontend/src/css/_currentimage.scss
+++ b/frontend/src/css/_currentimage.scss
@@ -1,5 +1,3 @@
-$border-line: rgba(190, 190, 190, 0.44);
-
 .current-image{
   display: grid;
   grid-template-rows: 3fr 1fr;
@@ -42,7 +40,7 @@ $border-line: rgba(190, 190, 190, 0.44);
 
       }
       &__main-block{
-        border: 1px $border-line solid;
+        border: 1px var(--border-line) solid;
         border-radius: 40px;
 
         background-color: #ffffff;
@@ -51,7 +49,7 @@ $border-line: rgba(190, 190, 190, 0.44);
         grid-template-columns: 1fr 1fr;
 
         &__image{
-          border: 1px $border-line solid;
+          border: 1px var(--border-line) solid;
           border-radius: 40px 0 0 40px;
         }
         &__other{}
@@ -61,6 +59,6 @@ $border-line: rgba(190, 190, 190, 0.44);
 
   }
   &__other-image{
-    border-top: 1px $border-line solid;
+    border-top: 1px var(--border-line) solid;
   }
 }
