--- a/frontend/src/css/_header.scss
+++ b/frontend/src/css/_header.scss
@@ -1,8 +1,4 @@
 .header{
-  font-family: "Lexend", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-weight: bolder;
   width: 100%;
   height: 100%;
 
@@ -15,10 +11,15 @@
     &__logo{
       width: 100%;
       height: 100%;
+      cursor: pointer;
+      &:active{
+        scale: 0.96;
+        transition: 0.3s;
+      }
       &__img{
         width: 100%;
         height: 100%;
-        background-image: url('../pages/logo2.png');
+        background-image: url('../../public/img/logo2.png');
         background-size: cover;
         background-position: center;
       }
