--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -86,18 +86,172 @@
   cursor: pointer;
 }
 .current-image__block__image-block__main-block {
-  border: 1px rgba(190, 190, 190, 0.44) solid;
+  border: 1px var(--border-line) solid;
   border-radius: 40px;
   background-color: #ffffff;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 .current-image__block__image-block__main-block__image {
-  border: 1px rgba(190, 190, 190, 0.44) solid;
+  border: 1px var(--border-line) solid;
   border-radius: 40px 0 0 40px;
 }
 .current-image__other-image {
-  border-top: 1px rgba(190, 190, 190, 0.44) solid;
+  border-top: 1px var(--border-line) solid;
+}
+
+.create-page {
+  display: grid;
+  grid-template-rows: 1fr 10fr;
+}
+.create-page__mainblock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.create-page__mainblock__create-block {
+  width: 70%;
+  height: 90%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.create-page__mainblock__create-block__create-icon {
+  position: relative;
+}
+.create-page__mainblock__create-block__create-icon__label {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 50%;
+  height: 50%;
+}
+.create-page__mainblock__create-block__create-icon__label__block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  border: 2px rgba(190, 190, 190, 0.68) dashed;
+  border-radius: 20px;
+  background-color: rgba(190, 190, 190, 0.47);
+}
+.create-page__mainblock__create-block__create-icon__input-icon {
+  visibility: hidden;
+  width: 0;
+}
+.create-page__mainblock__create-block__create-icon__created-icon {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: block;
+  width: 50%;
+  height: 50%;
+}
+.create-page__mainblock__create-block__create-icon__created-icon__file {
+  border: 2px rgba(190, 190, 190, 0.68) solid;
+  border-radius: 20px;
+  background-size: cover;
+  background-position: center;
+  background-color: black;
+}
+.create-page__mainblock__create-block__create-icon__created-icon__block {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 0;
+  margin: 10px;
+  height: 25px;
+  width: 25px;
+  background-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  cursor: pointer;
+}
+.create-page__mainblock__create-block__create-icon__created-icon__block__cross {
+  color: #ff0000;
+}
+.create-page__mainblock__create-block__description-icon {
+  display: flex;
+  flex-direction: column;
+}
+.create-page__mainblock__create-block__description-icon__tags {
+  margin: 0 auto;
+  border: 0;
+  box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  width: 300px;
+  height: 150px;
+  overflow-y: auto;
+  overflow-x: auto;
+  user-select: none;
+  z-index: 10;
+}
+.create-page__mainblock__create-block__description-icon__tags #option {
+  padding: 2px 0 0 10px;
+}
+.create-page__mainblock__create-block__description-icon__tags #option:hover {
+  background-color: rgba(185, 185, 185, 0.65);
+  cursor: pointer;
+}
+.create-page__mainblock__create-block__description-icon__tags #default {
+  border-bottom: 1px var(--border-line) solid;
+}
+.create-page__mainblock__create-block__description-icon__tags #default p {
+  font-size: 15px;
+  font-weight: normal;
+  padding: 2px 0 0 10px;
+  color: rgba(54, 54, 54, 0.75);
+}
+.create-page__caption {
+  position: relative;
+  border-top: 2px var(--border-line) solid;
+  border-bottom: 2px var(--border-line) solid;
+  display: flex;
+  align-items: center;
+}
+.create-page__caption button {
+  position: absolute;
+  right: 0;
+  margin-right: 40px;
+  border: 2px black solid;
+  border-radius: 20px;
+  padding: 5px;
+  background-color: var(--main-background);
+  color: black;
+  transition: color 0.5s;
+  transition: background-color 1s;
+}
+.create-page__caption button:hover {
+  background-color: var(--main-background-blackout);
+  color: white;
+  cursor: pointer;
+}
+.create-page__caption__name {
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 26px;
+}
+
+.inputForDescriptionPin {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 0 20px 20px 20px;
+  color: rgba(0, 0, 0, 0.55);
+}
+.inputForDescriptionPin__style {
+  border-radius: 20px;
+  height: 50px;
+  border: 1px var(--border-line) solid;
+  padding: 10px;
+  text-wrap: wrap;
+}
+.inputForDescriptionPin__style:hover {
+  outline: 1px var(--border-line) solid;
 }
 
 .image {
@@ -117,6 +271,7 @@
 }
 .image__safe {
   position: absolute;
+  z-index: 1;
   width: 50%;
   height: 50px;
   right: 0;
@@ -124,7 +279,7 @@
   margin: 10px;
   border-radius: 40px;
   border: none;
-  background-color: #05aaad;
+  background-color: var(--main-background);
   color: white;
   transition: background-color 0.2s;
   font-family: "Lexend", serif;
@@ -139,6 +294,7 @@
 .image__block {
   background-color: white;
   transition: background-color 0.2s;
+  z-index: 1;
   width: 40px;
   height: 40px;
   display: flex;
@@ -168,6 +324,13 @@
 
 .icon {
   scale: 3;
+}
+
+body {
+  font-family: "Lexend", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: bolder;
 }
 
 /**
@@ -323,10 +486,6 @@ svg * {
 }
 
 .header {
-  font-family: "Lexend", serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-  font-weight: bolder;
   width: 100%;
   height: 100%;
   display: grid;
@@ -339,11 +498,16 @@ svg * {
 .header__start__logo {
   width: 100%;
   height: 100%;
+  cursor: pointer;
+}
+.header__start__logo:active {
+  scale: 0.96;
+  transition: 0.3s;
 }
 .header__start__logo__img {
   width: 100%;
   height: 100%;
-  background-image: url("../pages/logo2.png");
+  background-image: url("../../public/img/logo2.png");
   background-size: cover;
   background-position: center;
 }
@@ -445,6 +609,12 @@ svg * {
 .button-active :nth-child(1):hover {
   cursor: pointer;
   background-color: #333333;
+}
+
+:root {
+  --main-background: #05aaad;
+  --main-background-blackout: #047d80;
+  --border-line: rgba(114, 113, 113, 0.52);
 }
 
 /*# sourceMappingURL=main.css.map */
