Отображение пинов на главной странице

--- a/frontend/src/css/_image.scss
+++ b/frontend/src/css/_image.scss
@@ -9,6 +9,7 @@
     border-radius: 10%;
     margin-bottom: 10px;
     max-width: 100%;
+    background-color: black;
     break-inside: avoid;
     &:hover{
       cursor: pointer;
