--- a/frontend/src/css/_createpage.scss
+++ b/frontend/src/css/_createpage.scss
@@ -101,44 +101,79 @@
       &__description-icon{
         display: flex;
         flex-direction: column;
+        position: relative;
 
-        &__tags{
-          margin: 0 auto;
+        &__choose-tags{
+          display: flex;
+          gap: 10px;
+          margin: 0 20px 20px 20px;
 
-          border: 0;
-          box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
-          border-radius: 20px ;
 
-          width: 300px;
-          height: 150px;
-
-          overflow-y: auto;
-          overflow-x: auto;
-
-          user-select: none;
-
-          z-index: 10;
-
-          #option{
-            padding:2px 0 0 10px;
-            &:hover{
-              background-color: rgba(185, 185, 185, 0.65);
-              cursor: pointer;
-            }
-          }
-
-          #default{
-              border-bottom: 1px var(--border-line) solid;
+          #choose-tag{
+            padding: 5px;
+            border: 1px var(--border-line) solid;
+            border-radius: 20px;
+            background-color: black;
+            color: white;
+            user-select: none;
             p{
-              font-size: 15px;
-              font-weight: normal;
+              padding: 4px;
+              margin: 0;
+              display: flex;
+              align-items: center;
+              gap: 3px;
+            }
+          }
+        }
+
+        &__search-tag{
+
+          position: relative;
+
+          &__tags{
+            position: absolute;
+            right: 0;
+
+            border: 0;
+            box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 20px ;
+
+            width: 400px;
+            height: 150px;
+
+            overflow-y: auto;
+            overflow-x: auto;
+
+            user-select: none;
+
+            background-color: white;
+
+            z-index: 10;
+
+            font-size: 20px;
+
+            #option{
               padding:2px 0 0 10px;
-              color: rgba(54, 54, 54, 0.75);
+              &:hover{
+                background-color: rgba(185, 185, 185, 0.65);
+                cursor: pointer;
+              }
+            }
+
+            #default{
+              border-bottom: 1px var(--border-line) solid;
+              p{
+                font-size: 13px;
+                font-weight: normal;
+                padding:2px 0 0 10px;
+                color: rgba(54, 54, 54, 0.75);
+              }
+
             }
 
           }
-
         }
+
 
       }
     }
