--- a/frontend/src/css/_header.scss
+++ b/frontend/src/css/_header.scss
@@ -1,9 +1,15 @@
 .header{
   width: 100%;
-  height: 100%;
+  height: 100px;
 
   display: grid;
   grid-template-columns: 1fr 4fr 1fr ;
+
+  z-index: 10;
+
+  position: fixed;
+
+  background-color: white;
 
   &__start{
     display: grid;
