--- a/frontend/src/css/_imagepage.scss
+++ b/frontend/src/css/_imagepage.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  margin-top: 100px;
   &__board{
     height: 100%;
     width: 90%;
