--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -121,6 +121,7 @@
 .create-page {
   display: grid;
   grid-template-rows: 1fr 10fr;
+  margin-top: 100px;
 }
 .create-page__mainblock {
   display: flex;
