--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -55,6 +55,7 @@
 .current-image {
   display: grid;
   grid-template-rows: 3fr 1fr;
+  margin-top: 100px;
 }
 .current-image__block {
   background-color: #ffffff;
@@ -298,6 +299,56 @@
 }
 .inputForDescriptionPin__style:hover {
   outline: 1px var(--border-line) solid;
+}
+
+.save-page {
+  display: grid;
+  grid-template-rows: 100px 1fr;
+  margin-top: 100px;
+}
+.save-page__caption {
+  position: relative;
+  border-top: 2px var(--border-line) solid;
+  border-bottom: 2px var(--border-line) solid;
+  display: flex;
+  align-items: center;
+}
+.save-page__caption__name {
+  margin-left: 20px;
+  font-weight: bold;
+  font-size: 26px;
+}
+.save-page__main-block {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.save-page__main-block__board {
+  height: 100%;
+  width: 90%;
+  columns: 6;
+  column-gap: 20px;
+}
+@media (max-width: 1500px) {
+  .save-page__main-block__board {
+    columns: 5;
+  }
+}
+@media (max-width: 1300px) {
+  .save-page__main-block__board {
+    columns: 4;
+  }
+}
+@media (max-width: 1100px) {
+  .save-page__main-block__board {
+    columns: 3;
+  }
+}
+@media (max-width: 800px) {
+  .save-page__main-block__board {
+    columns: 2;
+  }
 }
 
 .image {
@@ -620,6 +671,29 @@ svg * {
 }
 .buttonSave:hover {
   background-color: #047d80;
+  cursor: pointer;
+}
+
+.buttonSaveIsPressed {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  width: 50%;
+  height: 50px;
+  margin: 10px;
+  border-radius: 40px;
+  border: none;
+  background-color: rgba(70, 70, 70, 0.85);
+  color: white;
+  transition: background-color 0.2s;
+  font-family: "Lexend", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: bolder;
+}
+.buttonSaveIsPressed:hover {
+  background-color: rgba(199, 0, 24, 0.71);
   cursor: pointer;
 }
 
